GooglePlus Style fix vertical align issues
Modified the Google Plus style to vertical align text instead of sticking it to the top.

--- a/share/spice/google_plus/google_plus.css
+++ b/share/spice/google_plus/google_plus.css
@@ -11,8 +11,16 @@
     text-align: center;
     vertical-align: middle;
     font-weight: 400;
+    display: table-cell;
+    width: 150px;
 }
 
 .tile--google_plus .tile__body {
     padding-bottom: 20px;
+}
+
+.tile--google_plus .tile__title__main
+    max-height: 2.5em;
+    overflow: hidden;
+    display: block;
 }
